# quant-ai-platform

./: .env.example  .gitattributes  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 769cd08dea6c_initial_schema.py
config/: __init__.py  constants.py  settings.py
docker/: Dockerfile.mlflow
docs/: CLAUDE SYSTEM PROMPT.md  Data Schema.md  Quantitative AI Research Platform – Project Overview.md  System Architecture.md  claude_data_engineer.md  claude_machine_learning_engineer.md  claude_quant_engineer.md
scripts/: run_features.py  run_ingestion.py
src/data_pipeline/: __init__.py  cleaning.py  ingestion.py  processing.py  universe.py  validation.py
src/data_pipeline/connectors/: __init__.py  yfinance_connector.py
src/data_storage/: __init__.py  parquet_writer.py
src/database/: __init__.py  sessions.py
src/database/models/: __init__.py  asset.py  feature.py  portfolio_metric.py  price.py  signal.py  trade.py
src/utils/: __init__.py  logger.py
tests/data_pipeline/: test_cleaning.py  test_ingestion.py  test_processing.py  test_validation.py
tests/data_storage/: test_parquet_writer.py
