[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant_ai_platform"
version = "0.1.0"
description = "Institutional-grade quantitative AI research platform for Indian markets"
requires-python = ">=3.12"
dependencies = [
    "SQLAlchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "yfinance>=0.2",
    "pandas>=2.0",
    "numpy>=1.26",
    "mlflow>=2.0",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "PyPortfolioOpt>=1.5",
    "plotly>=5.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "pyarrow>=15.0",
    "pandas-ta>=0.3",
    "quantstats>=0.0.62",
    "streamlit>=1.35",
    "fredapi>=0.5",
    "newsapi-python>=0.2",
    "tenacity>=8.0",
    "requests>=2.31",
    "pytest>=9.0.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["src", "config"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "venv", ".venv"]